--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="creative developer portfolio website"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,20 +24,60 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TECHWORK STUDIO PORTFOLIO WEBSITE</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" , type="text/css" , href="/myfirstreactapp/src/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@700;500&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+  
+    <nav class="navbar">
+      <div class="navbar-intermediate">
+        <div class="nav-logo-wrapper">
+            <img class="nav-logo-img" src="/images/tech_work_logo.png">
+            <h1>techWork_Studios</h1>
+        </div>
+        <div class="nav-links-wrapper">
+            <a href="about.html">about</a>
+            <a href="portfolio.html">portfolio</a>
+            <a href="work_it_out.html">lets begin</a>
+        </div>
+        <div class="hamburger-button-wrapper">
+            <a href="javascript:void(0);" class="icon" onclick="hamburgerButton()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </div>
+      </div>
+    </nav>
+    <div id="myLinks">
+      <ul>
+          <li><a href="about.html">about</a></li>
+          <li><a href="portfolio.html">portfolio</a></li>
+          <li><a href="work_it_out.html">lets begin</a></li>
+      </ul>
+    </div>
+    <div class="container">
+      <section class="hero-section">
+          <div class="wrapper">    
+          
+          </div>
+          <div class="wrapper2">
+              <h1>FULL STACK WEB & SOFTWARE DEVELOPMENT </h1>
+              <p>Create unforgettable user experiences with our design-driven Websites and Apps.</p>
+              <div class="cta-wrapper">
+              <button id="cta-button">Start Work Now</button>
+              </div>
+          </div>
+      </section>
+    </div>
+    <div class="language-logos-section">
+        <div id="root"></div>
+        <div class="find-out"></div>
+    </section>
+    <script src="/myfirstreactapp/public/script-nav.js">
+    </script>
   </body>
 </html>
